# rh-kg

./: .gitignore  .pre-commit-config.yaml  ADR-001-knowledge-graph-architecture.md  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  simple-test.yaml  test-apply.yaml
backend/: Dockerfile  demo_model_generation.py  demo_validation.py  pyproject.toml  pytest.ini  simple_validation_test.py
backend/kg/: __init__.py
backend/kg/api/: __init__.py  config.py  dependencies.py  main.py
backend/kg/api/health/: __init__.py  dependencies.py  router.py  service.py
backend/kg/cli/: __init__.py  apply.py  schema.py  validate.py
backend/kg/core/: __init__.py  dependency_types.py  json_schema_generator.py  logging.py  model_factory.py  relationship_types.py  schema.py  schema_loader.py
backend/kg/migrations/: deprecation.py  detector.py  executor.py  integration.py  rollback.py  types.py  validator.py  version.py
backend/kg/storage/: __init__.py  dependency_processor.py  dgraph.py  exceptions.py  factory.py  interface.py  mock.py  models.py  relationship_processor.py
backend/kg/validation/: __init__.py  engine.py  errors.py  layers.py  validators.py
backend/schemas/_base/base_external/: 1.0.0.yaml
backend/schemas/external_dependency_package/: 1.0.0.yaml
backend/schemas/external_dependency_version/: 1.0.0.yaml
backend/schemas/repository/: 1.0.0.yaml
backend/tests/: __init__.py
backend/tests/integration/: test_apply_real_issues.py  test_full_model_generation.py  test_health_endpoints.py  test_validation_integration.py
backend/tests/unit/: test_additive_schema_evolution.py  test_apply_upsert_dependencies.py  test_cli_apply.py  test_cli_validate.py  test_dependency_processing.py  test_init.py  test_json_schema_generator.py  test_model_factory.py  test_relationship_replacement.py  test_schema_loader.py  test_schema_validation.py  test_storage_upsert.py  test_validation_engine.py
docs/: roadmap.md  technical-implementation.md
spec/: README.md  additive-schema-evolution.md  canonicalization-spec.md  data-model-spec.md  schema-spec.md
spec/api/: mcp-server-spec.md  rest-spec.md
spec/cli/: apply-spec.md  json-schema-export-spec.md  validation-spec.md
spec/schemas/: base_internal.yaml  external_dependency_package.yaml  external_dependency_version.yaml  repository.yaml  schema-management-spec.md
spec/storage/: dgraph-spec.md
spec/validation/: validation-spec.md
